syntax = "proto3";

package bmpstreamer;

import "net/api/net.proto";
import "route/api/route.proto";

service RIBService {
    rpc adjRIBInStream(AdjRIBInStreamRequest) returns (stream RIBUpdate);
}

message AdjRIBInStreamRequest {
    bio.net.IP router = 1;
}

message RIBUpdate {
    bio.net.IP peer = 1;
    bool advertisement = 2;
    bio.route.Route route = 3;
}